add skills logo, update skills media query, edit portfolio txt, edit about me, add profile photo

--- a/index.html
+++ b/index.html
@@ -72,10 +72,9 @@
         <div class="header-content">
             <div class="header-content-inner">
                 <!-- <h1 id="homeHeading">Jillian Flook</h1> -->
-                <img src="img/JF.LogoCircle.png" alt="Jillian logo">
+                <h2>Front End Developer</h2>
                 <hr>
-                <p>Full-stack web developer in Austin, Texas, focusing on front-end applications and UX. </p>
-                <!-- <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a> -->
+                <p>Full-stack web developer in Austin, Texas, focusing on front-end applications and well curated user experiences.</p>
             </div>
         </div>
     </header>
@@ -84,9 +83,12 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">About</h2>
+                    <img id="profilePic" class="img-circle" src="img/profile.jpg" alt="Jillian profile picture">
+                    <!-- <h2 class="section-heading">About</h2> -->
                     <hr class="light">
-                    <p class="text-faded">I am a Texas native and Houston to Austin transplant. After completing my Bachelor of Arts in Art History and Spanish at Baylor, I dove into the nonprofit world. For the past three years, I pursued my personal and creative interest in web development before completing the University of Texas Full-Stack Development certification.</p>
+                    <p class="text-faded">I am a Texas native and after exploring the Lone Star State, I happily settled in Austin. I received my BA in Art History and Spanish at Baylor and promptly dove into the nonprofit world. The nonprofit field was the perfect space to practice program management and give back to our community. Shortly after graduating, I developed an interest in web development. As a life-long learner, I began taking classes on nights and weekends. Before I knew it, front end development was my passion and career focus.</p>
+
+                    <p class="text-faded">My development background consists of independent online study, the ACC Accelerated Programmer Training program, and the University of Texas Full-Stack Development certification. There are many things that I love about this field, one of which being that the learning doesn't stop. My focus is in front-end applications, mobile responsiveness, UX, and JavaScript frameworks. When I am not absorbed in a project or at a local meetup, you can find me at one of Austin's many beautiful parks.</p>
                 </div>
             </div>
         </div>
@@ -103,31 +105,59 @@
         </div>
         <div class="container">
             <div class="row">
-                <div class="col-lg-3 col-md-6 col-sm-6 text-center">
+                <div class="col-lg-3 col-sm-4 col-xs-6 text-center">
                     <div class="service-box">
                         <img src="img/skills/css3.png" alt="css logo" class="skillsPic">
                         <h3>CSS</h3>
                         <p class="text-muted"></p>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6  col-sm-6 text-center">
+                <div class="col-lg-3 col-sm-4 col-xs-6 text-center">
                     <div class="service-box">
                         <img src="img/skills/javascript.png" alt="javascript logo" class="skillsPic">
                         <h3>JavaScript</h3>
                         <p class="text-muted"></p>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6  col-sm-6 text-center">
+                <div class="col-lg-3 col-sm-4 col-xs-6 text-center">
                     <div class="service-box">
                         <img src="img/skills/nodejs.ico" alt="nodejs logo" class="skillsPic">
                         <h3>Node.js</h3>
                         <p class="text-muted"></p>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6 col-sm-6 text-center">
+                <div class="col-lg-3 col-sm-4 col-xs-6 text-center">
                     <div class="service-box">
                         <img src="img/skills/mysql.png" alt="MySQL logo" class="skillsPic">
                         <h3>MySQL</h3>
+                        <p class="text-muted"></p>
+                    </div>
+                </div> 
+                <div class="col-lg-3 col-sm-4 col-xs-6 text-center">
+                    <div class="service-box">
+                        <img src="img/skills/bootstrap.jpg" alt="Twitter Bootstrap logo" class="skillsPic">
+                        <h3>Bootstrap</h3>
+                        <p class="text-muted"></p>
+                    </div>
+                </div>
+                <div class="col-lg-3  col-sm-4 col-xs-6 text-center">
+                    <div class="service-box">
+                        <img src="img/skills/html5.png" alt="HTML5 logo" class="skillsPic">
+                        <h3>HTML5</h3>
+                        <p class="text-muted"></p>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-sm-4 col-xs-6 text-center">
+                    <div class="service-box">
+                        <img src="img/skills/jquery.jpg" alt="jQuery logo" class="skillsPic">
+                        <h3>JQuery</h3>
+                        <p class="text-muted"></p>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-sm-4 col-xs-6 text-center">
+                    <div class="service-box">
+                        <img src="img/skills/git.png" alt="GIT logo" class="skillsPic">
+                        <h3>GIT</h3>
                         <p class="text-muted"></p>
                     </div>
                 </div>
@@ -147,30 +177,32 @@
         <div class="container-fluid">
             <div class="row no-gutter popup-gallery">
                 <div class="col-lg-4 col-sm-6">
-                    <a href="https://jflook10.github.io/Giphy/" class="portfolio-box" target="_blank">
-                        <img src="img/portfolio/thumbnails/GIFYmals.png" class="img-responsive" alt="">
+                    <a href="https://knowgo.herokuapp.com/" target= "_blank" class="portfolio-box">
+                        <img src="img/portfolio/thumbnails/KnowGo.png" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    Gify API -- Local Storage
-                                </div>
                                 <div class="project-name">
-                                    Watch your favorite animal gifs all in one place.
+                                    KnowGo Austin
+                                </div>
+                                <div class="project-category text-faded">
+                                    Search for Austin area events and see results based on location and safety in a single page application. <br>
+                                    REST APIs -- JQuery -- JavaScript -- CSS -- Materialize -- Flexbox -- HTML5
                                 </div>
                             </div>
                         </div>
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="https://knowgo.herokuapp.com/" target= "_blank" class="portfolio-box">
-                        <img src="img/portfolio/thumbnails/KnowGo.png" class="img-responsive" alt="">
+                    <a href="https://jflook10.github.io/Giphy/" class="portfolio-box" target="_blank">
+                        <img src="img/portfolio/thumbnails/GIFYmals.png" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    KnowGo Austin
-                                </div>
                                 <div class="project-name">
-                                    Safety single page app for Austin events.
+                                    GIFYmals
+                                </div>
+                                <div class="project-category text-faded">
+                                    Watch your favorite animal gifs all in one place. <br>
+                                    Gify API -- Local Storage -- CSS -- JavaScript -- HTML5
                                 </div>
                             </div>
                         </div>
@@ -181,11 +213,12 @@
                         <img src="img/portfolio/thumbnails/Platonix.png" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
+                                <div class="project-name">
                                     Platonix
                                 </div>
-                                <div class="project-name">
-                                    Full stack application using MySQL and node.js.
+                                <div class="project-category text-faded">
+                                    Find a new bff in a full stack application.<br>
+                                    MySQL -- Node.js -- JavaScript -- REST APIs -- CSS -- HTML5
                                 </div>
                             </div>
                         </div>
