--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <!-- /.container-fluid -->
     </nav>
 
-    <header>
+    <header id="indexHeader">
         <div class="header-content">
             <div class="header-content-inner">
                 <!-- <h1 id="homeHeading">Jillian Flook</h1> -->
@@ -177,7 +177,7 @@
         <div class="container-fluid">
             <div class="row no-gutter popup-gallery">
                 <div class="col-lg-4 col-sm-6">
-                    <a href="https://knowgo.herokuapp.com/" target= "_blank" class="portfolio-box">
+                    <a href="knowGo.html" class="portfolio-box">
                         <img src="img/portfolio/thumbnails/KnowGo.png" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
