--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="https://platonix.herokuapp.com/" target="_blank" class="portfolio-box">
+                    <a href="platonix.html" target="_blank" class="portfolio-box">
                         <img src="img/portfolio/thumbnails/Platonix.png" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
