spell check platonix

--- a/platonix.html
+++ b/platonix.html
@@ -93,11 +93,11 @@
 		</section>
 		<section class="portSection">
             <p>Platonix is a full stack application designed to connect a user with a new friend. The UI is the incipient phase of a networking application to the user. The primary benefit of the application is in the rapid development and prototyping using Node.js and packages like express.js. </p>
-            <p>Users start on the landing page where they can begin the survey or scroll down to read more about the creators. Upon submit, the absolute difference is calcuated between the user answer for each questions and the same answer for entries in the db. The pervious user in the database with the smallest abosulte difference- most similar answers- is returned as the best match. Following the evaluation, the current user's survey responses are saved the to MySQL database. The user is then sent to the match results page.</p>
+            <p>Users start on the landing page where they can begin the survey or scroll down to read more about the creators. Upon submit, the absolute difference is calculated between the user answer for each questions and the same answer for entries in the db. The previous user in the database with the smallest absolute difference- most similar answers- is returned as the best match. Following the evaluation, the current user's survey responses are saved the to MySQL database. The user is then sent to the match results page.</p>
         <section class="flexContainer portSection">
             <img class="portfolioImg " src="img/portfolio/mockups/platonixMatched.jpg" alt="Platonix matched results page">
         </section>
-            <p>Platonix has a clear course of action before it can emerge as the "next" Bumble or Tinder. Incorporating squelize.js would steamline the query process and the table creation. The addition of media queries will ensure that each page is responsive. Incorporating a public file would start to make the application deployment ready. The timeline for Platonix was 3 days. We completed the MVP and proof of concept within the 3 day timeline.</p>
+            <p>Platonix has a clear course of action before it can emerge as the "next" Bumble or Tinder. Incorporating Sequelize.js would streamline the table creation, manipulation, and queries. The addition of media queries will ensure that each page is responsive. Incorporating a public file would start to make the application deployment ready. The timeline for Platonix was 3 days. We completed the MVP and proof of concept within the 3 day timeline.</p>
 
 			<div class="flexContainer">
 				<a class="portButton" href="https://platonix.herokuapp.com/">View the app</a>
