--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
         </div>
         <div class="container-fluid">
             <div class="row no-gutter popup-gallery">
-                <div class="col-lg-4 col-sm-6">
+                <div class="col-lg-6 col-sm-6">
                     <a href="knowGo.html" class="portfolio-box">
                         <img src="img/portfolio/thumbnails/KnowGo.png" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
@@ -192,7 +192,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-lg-4 col-sm-6">
+                <!-- <div class="col-lg-4 col-sm-6">
                     <a href="https://jflook10.github.io/Giphy/" class="portfolio-box" target="_blank">
                         <img src="img/portfolio/thumbnails/GIFYmals.png" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
@@ -207,8 +207,8 @@
                             </div>
                         </div>
                     </a>
-                </div>
-                <div class="col-lg-4 col-sm-6">
+                </div> -->
+                <div class="col-lg-6 col-sm-6">
                     <a href="platonix.html" target="_blank" class="portfolio-box">
                         <img src="img/portfolio/thumbnails/Platonix.png" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
@@ -239,21 +239,6 @@
         </div>
     </aside>
 
-<!--     <section id="contact">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">Let's Get In Touch!</h2>
-                    <hr class="primary">
-                    <p>Ready to start your next project? That's great- send an email to get started today!</p>
-                </div>
-                <div class="col-lg-8 col-lg-offset-2  text-center">
-                    <i class="fa fa-envelope-o fa-3x sr-contact"></i>
-                    <p><a href="mailto:jillian@flook.co">jillian@flook.co</a></p>
-                </div>
-            </div>
-        </div>
-    </section> -->
 
     <!-- jQuery -->
     <script src="vendor/jquery/jquery.min.js"></script>
