add hookedIn to site, add hookedIn to portfolio index

--- a/index.html
+++ b/index.html
@@ -176,7 +176,23 @@
         </div>
         <div class="container-fluid">
             <div class="row no-gutter popup-gallery">
-                <div class="col-lg-6 col-sm-6">
+                <div class="col-lg-4 col-sm-6">
+                    <a href="hookedIn.html" class="portfolio-box">
+                        <img src="img/portfolio/thumbnails/hookedIn.png" class="img-responsive" alt="">
+                        <div class="portfolio-box-caption">
+                            <div class="portfolio-box-caption-content">
+                                <div class="project-name">
+                                    HookedIn
+                                </div>
+                                <div class="project-category text-faded">
+                                    Platform for UT Coding Bootcamp alumni to share their experiences in the workforce and connect with past cohorts. <br>
+                                    Node.JS -- MySQL -- SASS -- JavaScript -- JQuery -- Flexbox -- Bootstrap -- HTML5
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div> <!-- end of hookedIn -->
+                <div class="col-lg-4 col-sm-6">
                     <a href="knowGo.html" class="portfolio-box">
                         <img src="img/portfolio/thumbnails/KnowGo.png" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
@@ -191,24 +207,8 @@
                             </div>
                         </div>
                     </a>
-                </div>
-                <!-- <div class="col-lg-4 col-sm-6">
-                    <a href="https://jflook10.github.io/Giphy/" class="portfolio-box" target="_blank">
-                        <img src="img/portfolio/thumbnails/GIFYmals.png" class="img-responsive" alt="">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-name">
-                                    GIFYmals
-                                </div>
-                                <div class="project-category text-faded">
-                                    Watch your favorite animal gifs all in one place. <br>
-                                    Gify API -- Local Storage -- CSS -- JavaScript -- HTML5
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div> -->
-                <div class="col-lg-6 col-sm-6">
+                </div> <!-- end of KnowGo -->
+                <div class="col-lg-4 col-sm-6">
                     <a href="platonix.html" target="_blank" class="portfolio-box">
                         <img src="img/portfolio/thumbnails/Platonix.png" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
@@ -223,7 +223,7 @@
                             </div>
                         </div>
                     </a>
-                </div>
+                </div> <!-- end of platonix -->
             </div>
         </div>
     </section>
