fix mislabeled image name

--- a/hookedIn.html
+++ b/hookedIn.html
@@ -93,15 +93,15 @@
 			<img class="portfolioImg " src="img/portfolio/mockups/hookedIn/landing.jpg" alt="HookedIn landing page on desktop and mobile">
 		</section>
 		<section class="portSection">
-			<p>The purpose of HookedIn is to have a readily accessible data resource center for Bootcamp students and grads. With HookedIn, students and alums can network across cohorts, review portfolios, connect through LinkedIn and email, or find a mentor. The application is fully mobile responsive. The cohesive and professional UI is familiar to other social networking sites.</p>
-            <p>Landing page features include client and server side form validation, passport validation, and password encryption. User's are given access to the site using a Passport.js token.</p>
+			<p>The purpose of HookedIn is to have a readily accessible data resource center for UT Bootcamp students and grads. With HookedIn, students and alums can network across cohorts, review portfolios, connect through LinkedIn and email, or find a mentor. The application is fully mobile responsive. The cohesive and professional UI is familiar to other social networking sites.</p>
+            <p>Landing page features include client and server side form validation, passport validation, and password encryption. Users are given access to the site using a Passport.js token.</p>
             <p>First time users are routed to the profile page to add additional optional information. Profile fields are autopopulated for the user's convenience and validated before making changes to the database.</p>
             
             <section class="flexContainer portSection">
                 <img class="portfolioImg " src="img/portfolio/mockups/hookedIn/dashboard.jpg" alt="HookedIn dashboard page on desktop and tablet">
             </section>
-            <p>The dashboard is the focal point of the application. User's can search through members by name, cohort, city, and state with out refreshing the page. A user can click on any other user in the dashboard. A modal displays with additional information on the selected user. On desktop and tablet views, pie charts are displayed to the page for user employment rates and for the length of time job seeking.</p>
-            <p>Future changes include an admin interface to select who may or may not sign up to view the app as well as delete accounts upon request. Users will also be able to update and reset their password. Given the current limitations of the database host, weekly database screen shots are only created when the database is running.</p>
+            <p>The dashboard is the focal point of the application. User's can search through members by name, cohort, city, and state without refreshing the page. A user can click on any other user in the dashboard. A modal displays with additional information on the selected user. On desktop and tablet views, pie charts are displayed to the page for user employment rates and for the length of time job seeking.</p>
+            <p>Future changes include an admin interface to select who may or may not sign up to view the app as well as delete accounts upon request. Users will also be able to update and reset their password. Given the current limitations of the database host, weekly database screenshots are only created when the database is running.</p>
         </section>
 		<section class="flexContainer portSection">
 			<video min-width="320" min-height="240" controls>
