--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
         <!-- /.container-fluid -->
     </nav>
 
-    <header id="indexHeader">
-        <div class="header-content">
+    <header id="indexHeader" class="parallax">
+        <div class="header-content parallax-inner">
             <div class="header-content-inner">
                 <!-- <h1 id="homeHeading">Jillian Flook</h1> -->
                 <h2>Front End Developer</h2>
@@ -85,7 +85,7 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <img id="profilePic" class="img-circle" src="img/profile.jpg" alt="Jillian profile picture">
                     <!-- <h2 class="section-heading">About</h2> -->
-                    <hr class="light">
+                    <hr class="primary">
                     <p class="text-faded">I am a Texas native and after exploring the Lone Star State, I happily settled in Austin. I received my BA in Art History and Spanish at Baylor and promptly dove into the nonprofit world. The nonprofit field was the perfect space to practice program management and give back to our community. Shortly after graduating, I developed an interest in web development. As a life-long learner, I began taking classes on nights and weekends. Before I knew it, front end development was my passion and career focus.</p>
 
                     <p class="text-faded">My development background consists of independent online study, the ACC Accelerated Programmer Training program, and the University of Texas Full-Stack Development certification. There are many things that I love about this field, one of which being that the learning doesn't stop. My focus is in front-end applications, mobile responsiveness, UX, and JavaScript frameworks. When I am not absorbed in a project or at a local meetup, you can find me at one of Austin's many beautiful parks.</p>
@@ -94,12 +94,12 @@
         </div>
     </section>
 
-    <section id="skills">
+    <section id="skills" class="parallax">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Skills</h2>
-                    <hr class="primary">
+                    <hr class="light">
                 </div>
             </div>
         </div>
