add content for alacode page and add sub-page header class

--- a/alacode.html
+++ b/alacode.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Flook - aLaCode</title>
+    <title>Flook - A La Code</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -43,7 +43,7 @@
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
                 </button>
-                <a class=" navbar-brand page-scroll" href="index.html">Jillian Flook</a>
+                <a class="navbar-brand page-scroll" href="index.html">Jillian Flook</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -69,16 +69,17 @@
     </nav>
 
     <header class="portfolioHeader">
-        <div class="header-content">
+        <div class="header-subpage">
             <div class="header-content-inner">
                 <h2>A La Code</h2>
-                <p>Search for Austin area events and see results based on location and safety in a single page application. </p>
+                <p>Live WordPress site and blog</p>
 				<div class="ulContainer">
 					<ul class="portUl">
 						<li class="portLi">WordPress</li>
-						<li class="portLi">Domain Services</li>
-						<li class="portLi">Hosting Services</li>
+                        <li class="portLi">Hosting Services</li>
 						<li class="portLi">PHP</li>
+						<li class="portLi">JavaScript</li>
+                        <li class="portLi">Bootstrap</li>
 						<li class="portLi">CSS</li>
 						<li class="portLi">HTML5</li>
 					</ul>
@@ -88,14 +89,17 @@
     </header>
 	<main>
 		<section class="flexContainer portSection">
-			<img class="portfolioImg " src="img/portfolio/mockups/alacode/alcHome.jpg" alt="A La Code mockup on desktop, tablet, and phone">
+			<img class="portfolioImg " src="img/portfolio/mockups/alacode/alcHome.jpg" alt="A La Code landing page">
 		</section>
 		<section class="portSection">
-			<p>What it is/purpose</p>
-            <p>How we did it</p>
-            <img class="portfolioImg " src="img/portfolio/mockups/alacode/alcAbout.jpg" alt="A La Code about page mockup on desktop and tablet">
-            <p>Features</p>
-            <p>Review</p>
+            <p>A La Code is a Wordpress site designed to chronicle the lives and tech interests of two web developers in Austin. The site not only shows the design and development skillset of Jillian and Ana, but also fills a current void in the developer-blog space. Many popular tech blogs were stark and lacked personality. A La Code in turn features lifestyle and developer content in a punny icecream branded package</p>
+            <p>From a development perspective, A La Code is and was a great opportunity to dive into WordPress custom theme development and PHP. A La Code uses WordPress for its popularity as a CMS, plugin potential, and extensive documentation. As a CMS, WordPress and the chose theme, make it simple for administrators at various experience levels to add and edit site content. This functionality is not immediately useful for A La Code, but gives the site potential to expand.</p>
+            <p>The site uses a custom theme based off of the popular Kale and Underscore themes. With a reliable theme foundation, the site could focus on custom styling, images, and content. </p>
+        <section class="flexContainer portSection">
+            <img class="portfolioImg " src="img/portfolio/mockups/alacode/alcAbout.jpg" alt="A La Code about page">
+        </section>
+            <p>A La Code is a fun and quickly growing site. With WordPress and PHP, there is still a lot to achieve. Next steps include adding functionality to the post and page templates that give non-developer admins more editing controll. Current pages primarily rely on PHP variables and HTML static content. Post content may be generated with the WordPress WYSIWYG post panel.</p>
+
 			<div class="flexContainer">
 				<a class="portButton" href="http://alacode.io/">View the site</a>
 			</div>
@@ -103,8 +107,8 @@
 		<section class="portSection">
 			<h3>Contributors</h3>
 			<div>
-				<p><strong>Development (PHP Theme Development):</strong>Andrew Reese</p>
-				<p><strong>Development &amp; Graphic Design:</strong> Jillian Flook</p>
+				<p><strong>Development, Design (especially Photoshop):</strong> Ana Goodwin</p>
+                <p><strong>Development, Design:</strong>Jillian Flook</p>
 			</div>
 		</section>
 	</main>
