--- a/hookedIn.html
+++ b/hookedIn.html
@@ -69,7 +69,7 @@
     </nav>
 
     <header class="portfolioHeader">
-        <div class="header-content">
+        <div class="header-subpage">
             <div class="header-content-inner">
                 <h2>HookedIn</h2>
                 <p>Platform for UT Coding Bootcamp alumni to share their experiences in the workforce and connect with past cohorts.</p>
