--- a/knowGo.html
+++ b/knowGo.html
@@ -69,7 +69,7 @@
     </nav>
 
     <header class="portfolioHeader">
-        <div class="header-content">
+        <div class="header-subpage">
             <div class="header-content-inner">
                 <h2>KnowGo</h2>
                 <p>Search for Austin area events and see results based on location and safety in a single page application. </p>
