--- a/platonix.html
+++ b/platonix.html
@@ -69,7 +69,7 @@
     </nav>
 
     <header class="portfolioHeader">
-        <div class="header-content">
+        <div class="header-subpage">
             <div class="header-content-inner">
                 <h2>Platonix</h2>
                 <p>Find a new bff in a full stack application.</p>
