added alacode content to index, add links to nav bar, edit header padding on subpage

--- a/alacode.html
+++ b/alacode.html
@@ -49,17 +49,17 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
-                    <!-- <li>
-                        <a class="page-scroll" href="#about">About</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#skills">Skills</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#portfolio">Portfolio</a>
-                    </li> -->
                     <li>
                         <a class="page-scroll" href="index.html">Home</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="index.html#about">About</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="index.html#skills">Skills</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="index.html#portfolio">Portfolio</a>
                     </li>
                 </ul>
             </div>
@@ -72,43 +72,45 @@
         <div class="header-subpage">
             <div class="header-content-inner">
                 <h2>A La Code</h2>
-                <p>Live WordPress site and blog</p>
-				<div class="ulContainer">
-					<ul class="portUl">
-						<li class="portLi">WordPress</li>
+                <p>Live WordPress site for two developers' independent projects and blogging</p>
+                <div class="ulContainer">
+                    <ul class="portUl">
+                        <li class="portLi">WordPress</li>
                         <li class="portLi">Hosting Services</li>
-						<li class="portLi">PHP</li>
-						<li class="portLi">JavaScript</li>
+                        <li class="portLi">PHP</li>
+                        <li class="portLi">JavaScript</li>
                         <li class="portLi">Bootstrap</li>
-						<li class="portLi">CSS</li>
-						<li class="portLi">HTML5</li>
-					</ul>
-				</div>
+                        <li class="portLi">CSS</li>
+                        <li class="portLi">HTML5</li>
+                    </ul>
+                </div>
             </div>
         </div>
     </header>
-	<main>
-		<section class="flexContainer portSection">
-			<img class="portfolioImg " src="img/portfolio/mockups/alacode/alcHome.jpg" alt="A La Code landing page">
-		</section>
-		<section class="portSection">
-            <p>A La Code is a Wordpress site designed to chronicle the lives and tech interests of two web developers in Austin. The site not only shows the design and development skillset of Jillian and Ana, but also fills a current void in the developer-blog space. Many popular tech blogs were stark and lacked personality. A La Code in turn features lifestyle and developer content in a punny icecream branded package</p>
-            <p>From a development perspective, A La Code is and was a great opportunity to dive into WordPress custom theme development and PHP. A La Code uses WordPress for its popularity as a CMS, plugin potential, and extensive documentation. As a CMS, WordPress and the chose theme, make it simple for administrators at various experience levels to add and edit site content. This functionality is not immediately useful for A La Code, but gives the site potential to expand.</p>
+    <main>
+        <section class="flexContainer portSection">
+            <img class="portfolioImg " src="img/portfolio/mockups/alacode/alcHome.jpg" alt="A La Code landing page">
+        </section>
+        <section class="portSection">
+            <p>A La Code is a Wordpress site designed to chronicle the lives and tech interests of two web developers in Austin. The site shows the design and development skillset of Jillian and Ana, while filling a current void in the developer-blog space. Many popular tech blogs were stark and lacked personality. A La Code in turn features lifestyle and developer content in a punny ice cream branded package</p>
+            <p>From a development perspective, A La Code is and was a great opportunity to dive into WordPress custom theme development and PHP. A La Code uses WordPress for its popularity as a CMS, plugin potential, and extensive documentation. As a CMS, WordPress and the chosen theme, make it simple for administrators at various experience levels to add and edit site content. This functionality is not immediately useful for A La Code, but gives the site potential to expand.</p>
             <p>The site uses a custom theme based off of the popular Kale and Underscore themes. With a reliable theme foundation, the site could focus on custom styling, images, and content. </p>
         <section class="flexContainer portSection">
             <img class="portfolioImg " src="img/portfolio/mockups/alacode/alcAbout.jpg" alt="A La Code about page">
         </section>
-            <p>A La Code is a fun and quickly growing site. With WordPress and PHP, there is still a lot to achieve. Next steps include adding functionality to the post and page templates that give non-developer admins more editing controll. Current pages primarily rely on PHP variables and HTML static content. Post content may be generated with the WordPress WYSIWYG post panel.</p>
+            <p>With WordPress and PHP, there is still a lot to achieve. Next steps include adding functionality to the post and page templates that give non-developer admins more editing control. Current pages primarily rely on PHP variables and HTML static content. Post content may be generated with the WordPress WYSIWYG post panel.</p>
+            <p>A La Code is a fun and growing site. It is an aesthetically pleasing and provides a platform for administrators to rapidly generate and display a variety of content. </p>
+ 
+            <div class="flexContainer">
+                <a class="portButton" href="http://alacode.io/">View the site</a>
+            </div>
+        </section>
+        <section class="portSection">
+            <h3>Contributors</h3>
+            <div>
+                <p><strong>Development, Design (especially Photoshop):</strong> Ana Goodwin</p>
+                <p><strong>Development, Design:</strong> Jillian Flook</p>
 
-			<div class="flexContainer">
-				<a class="portButton" href="http://alacode.io/">View the site</a>
-			</div>
-		</section>
-		<section class="portSection">
-			<h3>Contributors</h3>
-			<div>
-				<p><strong>Development, Design (especially Photoshop):</strong> Ana Goodwin</p>
-                <p><strong>Development, Design:</strong>Jillian Flook</p>
 			</div>
 		</section>
 	</main>
