--- a/knowGo.html
+++ b/knowGo.html
@@ -49,17 +49,17 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
-                    <!-- <li>
-                        <a class="page-scroll" href="#about">About</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#skills">Skills</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#portfolio">Portfolio</a>
-                    </li> -->
                     <li>
                         <a class="page-scroll" href="index.html">Home</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="index.html#about">About</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="index.html#skills">Skills</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="index.html#portfolio">Portfolio</a>
                     </li>
                 </ul>
             </div>
@@ -104,9 +104,9 @@
 		<section class="portSection">
 			<h3>Contributors</h3>
 			<div>
-				<p><strong>Development (HTML):</strong>Andrew Reese</p>
+				<p><strong>Development (HTML):</strong> Andrew Reese</p>
 				<p><strong>UX, Development (HTML, CSS, Frameworks):</strong> Jillian Flook</p>
-				<p><strong>Eventful API: </strong>Dacia Yang</p>
+				<p><strong>Eventful API:</strong> Dacia Yang</p>
 				<p><strong>Google API:</strong> Kyle Stoner</p>
 				<p><strong>Data.gov API, JS:</strong> Zack Smith</p>
 			</div>
