--- a/index.html
+++ b/index.html
@@ -176,7 +176,23 @@
         </div>
         <div class="container-fluid">
             <div class="row no-gutter popup-gallery">
-                <div class="col-lg-4 col-sm-6">
+                <div class="col-lg-3 col-sm-6">
+                    <a href="alacode.html" class="portfolio-box">
+                        <img src="img/portfolio/thumbnails/aLaCode.png" class="img-responsive" alt="">
+                        <div class="portfolio-box-caption">
+                            <div class="portfolio-box-caption-content">
+                                <div class="project-name">
+                                    A La Code
+                                </div>
+                                <div class="project-category text-faded">
+                                    Live WordPress site for two developers' independent projects and blogging <br>
+                                    WordPress -- Hosting Services -- PHP -- JavaScript -- CSS -- HTML5
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div> <!-- end of aLaCode -->
+                <div class="col-lg-3 col-sm-6">
                     <a href="hookedIn.html" class="portfolio-box">
                         <img src="img/portfolio/thumbnails/HookedIn.png" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
@@ -185,14 +201,14 @@
                                     HookedIn
                                 </div>
                                 <div class="project-category text-faded">
-                                    Platform for UT Coding Bootcamp alumni to share their experiences in the workforce and connect with past cohorts. <br>
-                                    Node.JS -- MySQL -- SASS -- JavaScript -- JQuery -- Flexbox -- Bootstrap -- HTML5
+                                    Social and career networking platform for UT Coding Bootcamp alumni. <br>
+                                    Node.JS -- MySQL -- SASS -- JavaScript -- Flexbox -- Bootstrap
                                 </div>
                             </div>
                         </div>
                     </a>
                 </div> <!-- end of hookedIn -->
-                <div class="col-lg-4 col-sm-6">
+                <div class="col-lg-3 col-sm-6">
                     <a href="knowGo.html" class="portfolio-box">
                         <img src="img/portfolio/thumbnails/KnowGo.png" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
@@ -208,7 +224,7 @@
                         </div>
                     </a>
                 </div> <!-- end of KnowGo -->
-                <div class="col-lg-4 col-sm-6">
+                <div class="col-lg-3 col-sm-6">
                     <a href="platonix.html" class="portfolio-box">
                         <img src="img/portfolio/thumbnails/Platonix.png" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
