add mini js to site

--- a/index.html
+++ b/index.html
@@ -225,16 +225,16 @@
                     </a>
                 </div> <!-- end of KnowGo -->
                 <div class="col-lg-3 col-sm-6">
-                    <a href="platonix.html" class="portfolio-box">
-                        <img src="img/portfolio/thumbnails/Platonix.png" class="img-responsive" alt="">
+                    <a href="miniJS.html" class="portfolio-box">
+                        <img src="img/portfolio/thumbnails/miniJS.png" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-name">
-                                    Platonix
+                                    Mini JS
                                 </div>
                                 <div class="project-category text-faded">
-                                    Find a new bff in a full stack application.<br>
-                                    MySQL -- Node.js -- JavaScript -- REST APIs -- CSS -- HTML5
+                                    Mini frontend JavaScript challenges and projects.<br>
+                                    JavaScript -- ES6 -- CSS -- Flexbox -- HTML5
                                 </div>
                             </div>
                         </div>
@@ -250,7 +250,7 @@
                 <h2>Connect with me</h2>
                 <a href="https://www.linkedin.com/in/jillian-flook/" class="btn btn-default btn-xl sr-button" target="_blank">LinkedIn</a>
                 <a href="https://github.com/jflook10" class="btn btn-default btn-xl sr-button" target="_blank">GitHub</a>
-                <a href="mailto:jillian@flook.co" class="btn btn-default btn-xl sr-button" target="_blank">jillian@flook.co</a>
+                <a href="https://www.behance.net/jillianflo88fd" class="btn btn-default btn-xl sr-button" target="_blank">Behance</a>
             </div>
         </div>
     </aside>
